// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LayoutContainer should render className in props 1`] = `
<div
  className="my-container container"
>
  <LayoutRow
    className="my-row"
    componentClass="div"
  >
    <LayoutCol
      className="my-cell"
      componentClass="div"
    >
      hello
    </LayoutCol>
  </LayoutRow>
</div>
`;

exports[`LayoutContainer should render using componentClass in props 1`] = `
<b
  className="my-container container"
>
  <LayoutRow
    className="my-row"
    componentClass="div"
  >
    <LayoutCol
      className="my-cell"
      componentClass="div"
    >
      hello
    </LayoutCol>
  </LayoutRow>
</b>
`;
